@@ -2396,7 +2396,7 @@ int svr_is_request(
     {
     close_conn(chan->sock, FALSE);
     log_err(errno,__func__,"Cannot get socket name using getpeername\n");
-    return PBSE_SOCKET_CLOSE;
+    return(PBSE_SOCKET_CLOSE);
     }
 
   addr = (struct sockaddr_in *)&s_addr;
