@@ -42,6 +42,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       was the same as the queue where the job was already assigned.
   b - Fixed qsub -v option. Variable list was not getting passed in to job environment.
       TRQ-1128
+  b - prevent pbs_server from spinning in select due to sockets in CLOSE_WAIT.
+      TRQ-1161.
   b - fix array/queue deadlocks. Queues are now always locked before arrays. TRQ-1168.
 
 4.1.0
